# sysmith

./: .gitignore  Cargo.toml  Makefile  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: genner.rs
src/: ast.rs  lib.rs  number.rs
src/model/: decl.rs  expr.rs  misc.rs  mod.rs  oprt.rs  program.rs  stmt.rs  typed.rs
src/program/: array.rs  comp_unit.rs  context.rs  exp.rs  func_def.rs  ident.rs  macros.rs  mod.rs  stmt.rs  traits.rs  value.rs  value_type.rs  var_decl.rs
src/program/decl/: array.rs  func_def.rs  ident.rs  mod.rs  var_decl.rs
src/program/exp/: binary.rs  mod.rs  nested.rs  number.rs  unary.rs  var.rs
src/program/stmt/: assign.rs  block.rs  break_stmt.rs  continue_stmt.rs  expr.rs  if_stmt.rs  mod.rs  return_stmt.rs  while_stmt.rs
sy/: README.md
